--- a/courses/ProbasEfreiS3/exos1_en.html
+++ b/courses/ProbasEfreiS3/exos1_en.html
@@ -507,7 +507,11 @@ Solution exercises 23 and 24
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p><img src="img/Proba_03-10-22/Proba_03-10-22-1.jpg" class="img-fluid"><img src="img/Proba_03-10-22/Proba_03-10-22-2.jpg" class="img-fluid"><img src="img/Proba_03-10-22/Proba_03-10-22-3.jpg" class="img-fluid"></p>
+<!-- ![](img/Proba_03-10-22/Proba_03-10-22-1.jpg)
+![](img/Proba_03-10-22/Proba_03-10-22-2.jpg)
+![](img/Proba_03-10-22/Proba_03-10-22-3.jpg) -->
+<iframe id="inlineFrameExample" title="" width="900" height="1200" src="https://share.goodnotes.com/s/SnDmlYeNLmoSmfJtPOdsPF#page-1">
+</iframe>
 </div>
 </div>
 </section><section id="exercices-supplémentaires" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="exercices-supplémentaires">Exercices supplémentaires</h2>
