--- a/courses/ProbasEfreiS3/appendix.html
+++ b/courses/ProbasEfreiS3/appendix.html
@@ -611,6 +611,35 @@ ul.task-list li input[type="checkbox"] {
 
 knitr::include_app('https://mghassany.shinyapps.io/shiny_pnorm/', height = '700px')
 ``` -->
+<!-- 
+::: {.callout-note}
+## Interactive Standard Normal distribution application
+
+<p align="center">
+<iframe id="inlineFrameExample"
+    title=""
+    width="700"
+    height="700"
+    src="https://mghassany.shinyapps.io/shiny_pnorm/">
+</iframe>
+</p>
+::: -->
+<div class="callout-note callout callout-style-default callout-captioned">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Interactive Normal distribution application
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p align="center">
+<iframe id="inlineFrameExample" title="" width="700" height="1400" src="https://gallery.shinyapps.io/dist_calc/">
+</iframe>
+</p>
+</div>
+</div>
 
 
 
