--- a/courses/ProbasEfreiS3/exos2.html
+++ b/courses/ProbasEfreiS3/exos2.html
@@ -180,7 +180,7 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#variables-alétoires-continues" id="toc-variables-alétoires-continues" class="nav-link active" data-scroll-target="#variables-alétoires-continues">Variables alétoires continues</a></li>
-  <li><a href="#loi-normale" id="toc-loi-normale" class="nav-link" data-scroll-target="#loi-normale">Loi Normale</a></li>
+  <li><a href="#loi-normale-loi-gaussienne" id="toc-loi-normale-loi-gaussienne" class="nav-link" data-scroll-target="#loi-normale-loi-gaussienne">Loi Normale (Loi Gaussienne)</a></li>
   </ul>
 </nav>
     </div>
@@ -330,8 +330,8 @@ variable aléatoire de loi exponentielle de paramètre $\frac{1}{100}$.
 <p><span class="theorem-title"><strong>Exercice 10 (Loi uniforme et loi exponentielle) </strong></span>Soit <span class="math inline">\(U\)</span> une v.a.c de loi unifrorme sur <span class="math inline">\([0,1]\)</span>. Montrer que la v.a. <span class="math inline">\(X= - \ln U\)</span> suit une loi exponentielle.</p>
 </div>
 </section>
-<section id="loi-normale" class="level2">
-<h2 class="anchored" data-anchor-id="loi-normale">Loi Normale</h2>
+<section id="loi-normale-loi-gaussienne" class="level2">
+<h2 class="anchored" data-anchor-id="loi-normale-loi-gaussienne">Loi Normale (Loi Gaussienne)</h2>
 <div id="exr-" class="theorem exercise">
 <p><span class="theorem-title"><strong>Exercice 11 </strong></span>On note <span class="math inline">\(\Phi\)</span> la fonction de répartition de la loi normale centrée réduite.</p>
 <ol type="1">
