--- a/courses/ProbasEfreiS3/index.html
+++ b/courses/ProbasEfreiS3/index.html
@@ -282,7 +282,7 @@ voici une solution
 <td style="text-align: center;"><a href="variables-aleatoires-continues.html">📖</a></td>
 <td style="text-align: center;"><a href="latex/slides_va_continues_fr.pdf">📋</a></td>
 <td><a href="latex/slides_va_continues_en.pdf">📋</a></td>
-<td></td>
+<td><a href="latex/slides_va_continues_en_amphi_annotated.pdf">📋✍️</a></td>
 <td></td>
 <td></td>
 </tr>
