--- a/courses/ProbasEfreiS3/exos2_en.html
+++ b/courses/ProbasEfreiS3/exos2_en.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Probabilités - Feuille d’exercices 2</title>
+<title>Probabilités - Exercises sheet 2</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -64,6 +64,7 @@ ul.task-list li input[type="checkbox"] {
 }</script>
 <script async="" src="https://hypothes.is/embed.js"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
 
 <link rel="stylesheet" href="mycss.css">
 </head>
@@ -75,7 +76,7 @@ ul.task-list li input[type="checkbox"] {
   <header id="quarto-header" class="headroom fixed-top">
   <nav class="quarto-secondary-nav" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
     <div class="container-fluid d-flex justify-content-between">
-      <h1 class="quarto-secondary-nav-title">Feuille d’exercices 2</h1>
+      <h1 class="quarto-secondary-nav-title">Exercises sheet 2</h1>
       <button type="button" class="quarto-btn-toggle btn" aria-label="Show secondary navigation">
         <i class="bi bi-chevron-right"></i>
       </button>
@@ -174,14 +175,21 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Table des matières</h2>
+   
+  <ul>
+  <li><a href="#continuous-random-variables" id="toc-continuous-random-variables" class="nav-link active" data-scroll-target="#continuous-random-variables">Continuous Random Variables</a></li>
+  <li><a href="#normal-gaussian-distribution" id="toc-normal-gaussian-distribution" class="nav-link" data-scroll-target="#normal-gaussian-distribution">Normal (Gaussian) distribution</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title d-none d-lg-block">Feuille d’exercices 2</h1>
+<h1 class="title d-none d-lg-block">Exercises sheet 2</h1>
 </div>
 
 
@@ -195,8 +203,159 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<section id="continuous-random-variables" class="level2 unnumbered">
+<h2 class="unnumbered anchored" data-anchor-id="continuous-random-variables">Continuous Random Variables</h2>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 1 </strong></span>Let <span class="math inline">\(X\)</span> be a continuous random variable of density function <span class="math inline">\(f\)</span> defined by: <span class="math inline">\(f(x) = k x \times {1}_{]0,2[} (x)\)</span>.</p>
+<ol type="1">
+<li><p>Determine the constant <span class="math inline">\(k\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(X)\)</span> and <span class="math inline">\(E(X^2)\)</span>.</p></li>
+<li><p>Let <span class="math inline">\(Z=X^2\)</span>. Determine the density function <span class="math inline">\(Z\)</span>. Calculate <span class="math inline">\(E(Z)\)</span>.</p></li>
+</ol>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 2 </strong></span>Let <span class="math inline">\(X\)</span> a continuous random variable of density:</p>
+<p><span class="math display">\[f(x)= \left\lbrace
+      \begin{array}{ll}
+      c(1-x^2)  &amp; \mbox{if} \quad -1&lt;x&lt;1\\
+      0 &amp; \mbox{sinon}
+      \end{array}
+\right.
+\]</span></p>
+<ol type="1">
+<li><p>Calculate <span class="math inline">\(c\)</span>?</p></li>
+<li><p>Determine the distribution function of <span class="math inline">\(X\)</span>?</p></li>
+</ol>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 3 </strong></span>Let <span class="math inline">\(X\)</span> a continuous random variable density:</p>
+<p><span class="math display">\[
+f(x)= \left\lbrace
+      \begin{array}{ll}
+      0  &amp; \mbox{if} \quad |x| &gt; k &gt; 0\\
+      x+1 &amp; \mbox{if} \quad |x| \le k
+      \end{array}
+  \right.
+\]</span></p>
+<ol type="1">
+<li><p>Determine <span class="math inline">\(k\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(X)\)</span> and <span class="math inline">\(E(X^2)\)</span>.</p></li>
+<li><p>Determine the distribution function of <span class="math inline">\(X\)</span>.</p></li>
+<li><p>Let <span class="math inline">\(Y=X^2\)</span>. Determine the distribution function and the density function of <span class="math inline">\(Y\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(Y)\)</span>.</p></li>
+</ol>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 4 (Random variable of even density function) </strong></span>Let <span class="math inline">\(X\)</span> a random variable having an <strong>even</strong> density function <span class="math inline">\(f\)</span>.</p>
+<ol type="1">
+<li><p>Calculate <span class="math inline">\(P(X \le 0)\)</span> and <span class="math inline">\(P(X\ge 0)\)</span>.</p></li>
+<li><p>Show that <span class="math inline">\(\forall \, x \in \mathbb{R}, F(x)=1-F(-x)\)</span>, where <span class="math inline">\(F\)</span> is the distribution function of <span class="math inline">\(X\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(X)\)</span>.</p></li>
+<li><p>Give an example of an <strong>even</strong> density function.</p></li>
+</ol>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 5 (Laplace distribution) </strong></span>Let <span class="math inline">\(c &gt; 0\)</span>, a real constant. Let <span class="math inline">\(f\)</span> a function defines on <span class="math inline">\(\mathbb{R}\)</span> by:</p>
+<p><span class="math display">\[ \forall \, x \in  \mathbb{R}, \quad f(x) = \frac{c}{2} e^{- c |x|}\]</span></p>
+<ol type="1">
+<li>Show that <span class="math inline">\(f\)</span> is a density function.</li>
+<li>Determine the distribution function <span class="math inline">\(F\)</span> of <span class="math inline">\(X\)</span>.</li>
+<li>Calculate <span class="math inline">\(E(X)\)</span>.</li>
+<li>What is the distribution of <span class="math inline">\(Y=|X|\)</span>.</li>
+</ol>
+</div>
+<!-- ::: {#exr-}
+
+## the loi exponentielle est sans mémoire
+
+On suppose que the durée of vie $D$, en jours, d’une ampoule, est une
+variable aléatoire of loi exponentielle of paramètre $\frac{1}{100}$.
+
+1.  Quelle est the durée of vie moyenne d’une ampoule?
+
+2.  Calculate the distribution function of $D$. En déduire l’expression
+    of $P(D > x)$.
+
+3.  On dit qu’une variable aléatoire est *sans mémoire* si
+    $\forall \, l > 0 \quad P(X \ge n+l|X \ge n)=P(X \ge l)$. Montrer
+    que $D$ est sans mémoire.
+
+4.  Quelle est the probability qu’une ampoule dure encore au moins 10
+    jours, sachant qu’à son $n^\text{e}$ jour, elle marche encore?
+
+::: -->
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 6 (Distributions of <code>min(X,Y)</code> and <code>max(X,Y)</code>) </strong></span>Let <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> two random variables of respective density functions <span class="math inline">\(f_X\)</span> and <span class="math inline">\(f_Y\)</span>. Let <span class="math inline">\(F_X\)</span> and <span class="math inline">\(F_Y\)</span> their distribution functions. It is assumed that <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> are independent. Let:</p>
+<p><span class="math display">\[Z = max(X,Y) \quad \quad \text{and} \quad \quad  T=min(X,Y)\]</span></p>
+<ol type="1">
+<li><p>Express the distribution functions of <span class="math inline">\(Z\)</span> and <span class="math inline">\(T\)</span> with respect to <span class="math inline">\(F_X\)</span> and <span class="math inline">\(F_Y\)</span>.</p></li>
+<li><p>Express the density functions of <span class="math inline">\(Z\)</span> and <span class="math inline">\(T\)</span> with respect to <span class="math inline">\(f_X, f_Y, F_X\)</span> and <span class="math inline">\(F_Y\)</span>.</p></li>
+</ol>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 7 (Minimum and Maximum of two exponential distributions) </strong></span>Let <span class="math inline">\(X_1\)</span> and <span class="math inline">\(X_2\)</span> two independent random variables following the exponential distribution with parameters <span class="math inline">\(\lambda_1\)</span> and <span class="math inline">\(\lambda_2\)</span>. Let <span class="math inline">\(X = min(X_1,X_2)\)</span>.</p>
+<ol type="1">
+<li><p>Show that <span class="math inline">\(X\)</span> follows an exponential distribution of parameter <span class="math inline">\(\lambda_1 + \lambda_2\)</span>.</p></li>
+<li><p>Two counters are open at a bank. The service time at the first counter (resp. at the second) follows an exponential distribution of average 20 min (resp. 30 min). Two customers enter simultaneously, one chooses the counter number 1 and the other the counter number 2.</p>
+<ol type="1">
+<li><p>On average, after how long does the first one come out?</p></li>
+<li><p>On average, after how long does the last one come out?</p></li>
+</ol></li>
+</ol>
+<p><strong>Hint:</strong> Indication: We can use the relation <span class="math inline">\(X_1 + X_2 = min(X_1,X_2) + max(X_1,X_2)\)</span>. The sum of two real numbers is equal to the sum of their minimum and maximum.</p>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 8 (Gamma function (Euler)) </strong></span>Gamma function is defined on <span class="math inline">\(\mathbb{R}_{+}^*\)</span> by:</p>
+<p><span class="math display">\[\Gamma(x) = \int_0^{+\infty} t^{x-1}e^{-t} dt\]</span></p>
+<ol type="1">
+<li><p>Show that <span class="math inline">\(\Gamma(x+1)=x\Gamma(x)\)</span>, <span class="math inline">\(\forall \, x &gt;0\)</span>.</p></li>
+<li><p>Express <span class="math inline">\(\Gamma(x+n)\)</span> in function of <span class="math inline">\(\Gamma(x)\)</span> for <span class="math inline">\(n\in \mathbb{N}\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(\Gamma(1)\)</span>. Deduce <span class="math inline">\(\Gamma(n+1)\)</span> for <span class="math inline">\(n\in \mathbb{N}\)</span>.</p></li>
+<li><p>Using the variable change <span class="math inline">\(t=u^2\)</span>, show that: <span class="math display">\[\Gamma(x)=2 \int_0^{+\infty} u^{2x-1}e^{-u^2} du\]</span></p></li>
+<li><p>Assuming that: <span class="math display">\[\int_0^{+\infty} e^{-x^2} dx = \frac{\sqrt{\pi}}{2}\]</span> Calculate <span class="math inline">\(\Gamma(\frac{1}{2})\)</span>.</p></li>
+</ol>
+<!-- 6.  Montrer que
+    $\Gamma(n+\frac{1}{2})=(n-\frac{1}{2})(n-\frac{3}{2})\ldots (\frac{1}{2})\Gamma(\frac{1}{2})$
+
+7.  En déduire the valeur of $\Gamma(n+\frac{1}{2})$. -->
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 9 (Loi Gamma) </strong></span>For <span class="math inline">\(a&gt;0\)</span> and <span class="math inline">\(\lambda&gt;0\)</span>, two real constants, we define the function <span class="math inline">\(f_{a,\lambda}\)</span> on <span class="math inline">\(\mathbb{R}\)</span> by: <span class="math display">\[\forall \, x \in \mathbb{R}, \quad  f_{a,\lambda} (x)= \frac{\lambda^a}{\Gamma(a)} x^{a-1} e^{-\lambda x} \times {1}_{\mathbb{R}_{+}}(x)\]</span></p>
+<ol type="1">
+<li><p>Show that <span class="math inline">\(f_{a,\lambda}\)</span> is a density function of <span class="math inline">\(X\)</span>.</p></li>
+<li><p>Calculate <span class="math inline">\(E(X)\)</span>.</p></li>
+</ol>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 10 (Uniform and Exponential distributions) </strong></span>Let <span class="math inline">\(U\)</span> a random variable of Uniform distribution on <span class="math inline">\([0,1]\)</span>. Show that <span class="math inline">\(X= - \ln U\)</span> follows an exponential distribution.</p>
+</div>
+</section>
+<section id="normal-gaussian-distribution" class="level2">
+<h2 class="anchored" data-anchor-id="normal-gaussian-distribution">Normal (Gaussian) distribution</h2>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 11 </strong></span>Note <span class="math inline">\(\Phi\)</span> the distribution function of the Standard Normal distribution.</p>
+<ol type="1">
+<li><p>Let <span class="math inline">\(X\)</span> a random variable following the Standard Normal distribution, i.e. <span class="math inline">\(X \thicksim \mathcal{N}(0,1)\)</span>. Using the table of Standard Normal distribution function, Calculate: <span class="math inline">\(P(X&gt;2), P(-1&lt;X&lt;1.5)\)</span> and <span class="math inline">\(P(X&lt;0.5)\)</span>.</p></li>
+<li><p>Let <span class="math inline">\(Y\)</span> a random variable following a Normal distribution: <span class="math inline">\(Y \thicksim \mathcal{N}(\mu,\sigma^2)=\mathcal{N}(4,16)\)</span>. Calculate: <span class="math inline">\(P(Y&gt;2), P(-1&lt;Y&lt;1.5)\)</span> and <span class="math inline">\(P(Y&lt;0.5)\)</span>.</p></li>
+<li><p>Let <span class="math inline">\(U \thicksim \mathcal{N}(6,4)\)</span>. Calculate: <span class="math inline">\(P(|U-4|&lt;3)\)</span> et <span class="math inline">\(P( U&gt;6 | U &gt; 3)\)</span>.</p></li>
+</ol>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 12 </strong></span>A machine produces coins of diameter <span class="math inline">\(X\)</span> (in cm) that is a random variable following a Normal distribution of expected value <span class="math inline">\(\mu\)</span> and variance <span class="math inline">\(\sigma^2 = (0.01)^2\)</span>. What should be the value of <span class="math inline">\(\mu\)</span> so that the probability that a random coin has a diameter greater than 3 cm, is less than 0.01?</p>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 13 </strong></span>It is planned to build a gatehouse at the entrance of a barrack in which the sentry can shelter in case of bad weather. Sentinels are conscripts whose size is approximately distributed according to a Normal distribution of expected value 175cm and standard deviation of 7cm. At what minimum height must the roof of the gatehouse be located, so that a randomly chosen sentinel has a probability greater than 0.95 of standing there?</p>
+</div>
+<div id="exr-" class="theorem exercise">
+<p><span class="theorem-title"><strong>Exercice 14 </strong></span>Express the following integrals w.r.t. the distribution function of the standard normal distribution <span class="math inline">\(\Phi\)</span>, then calculate:</p>
+<ol type="1">
+<li><span class="math inline">\(A=\int_0^1 e^{-\frac{x^2}{2}} dx\)</span></li>
+<li><span class="math inline">\(B=\int_0^2 e^{-2x^2+4x-2} dx\)</span></li>
+</ol>
+</div>
 
 
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
