--- a/courses/MDSEfreiS7/appendix-calculator.html
+++ b/courses/MDSEfreiS7/appendix-calculator.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Mathematics for Data Science - Readings</title>
+<title>Mathematics for Data Science - Appendix F — distribution calculator</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -30,8 +30,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-search/fuse.min.js"></script>
 <script src="site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="./">
-<link href="./td1.html" rel="next">
-<link href="./index.html" rel="prev">
+<link href="./appendix-fisher.html" rel="prev">
 <script src="site_libs/quarto-html/quarto.js"></script>
 <script src="site_libs/quarto-html/popper.min.js"></script>
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
@@ -76,7 +75,7 @@ ul.task-list li input[type="checkbox"] {
   <header id="quarto-header" class="headroom fixed-top">
   <nav class="quarto-secondary-nav" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
     <div class="container-fluid d-flex justify-content-between">
-      <h1 class="quarto-secondary-nav-title">Readings</h1>
+      <h1 class="quarto-secondary-nav-title">Appendix F — distribution calculator</h1>
       <button type="button" class="quarto-btn-toggle btn" aria-label="Show secondary navigation">
         <i class="bi bi-chevron-right"></i>
       </button>
@@ -117,7 +116,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./materials.html" class="sidebar-item-text sidebar-link active">Course readings</a>
+  <a href="./materials.html" class="sidebar-item-text sidebar-link">Course readings</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -180,7 +179,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
           <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./appendix-calculator.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">F</span>&nbsp; <span class="chapter-title">distribution calculator</span></a>
+  <a href="./appendix-calculator.html" class="sidebar-item-text sidebar-link active"><span class="chapter-number">F</span>&nbsp; <span class="chapter-title">distribution calculator</span></a>
   </div>
 </li>
       </ul>
@@ -190,21 +189,14 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc" class="toc-active">
-    <h2 id="toc-title">Table of contents</h2>
-   
-  <ul>
-  <li><a href="#applied-statistics-and-probability-for-engineers" id="toc-applied-statistics-and-probability-for-engineers" class="nav-link active" data-scroll-target="#applied-statistics-and-probability-for-engineers">Applied statistics and probability for engineers</a></li>
-  <li><a href="#introduction-to-probability-for-data-science" id="toc-introduction-to-probability-for-data-science" class="nav-link" data-scroll-target="#introduction-to-probability-for-data-science">Introduction to Probability for Data Science</a></li>
-  </ul>
-</nav>
+        
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title d-none d-lg-block">Readings</h1>
+<h1 class="title d-none d-lg-block">Appendix F — distribution calculator</h1>
 </div>
 
 
@@ -218,29 +210,12 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>Two books are recommended to read:</p>
-<div class="quarto-layout-panel">
-<div class="quarto-layout-row quarto-layout-valign-top">
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><img src="img/Montgomery.png" class="img-fluid"></p>
-</div>
-<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><img src="img/Chan.png" class="img-fluid"></p>
-</div>
-</div>
-</div>
-<section id="applied-statistics-and-probability-for-engineers" class="level2">
-<h2 class="anchored" data-anchor-id="applied-statistics-and-probability-for-engineers">Applied statistics and probability for engineers</h2>
-<p>Montgomery, D. C., &amp; Runger, G. C. (2010). Applied statistics and probability for engineers. John wiley &amp; sons.</p>
-<p>Downloadable from <a href="books/Applied-Statistics-and-Probability-for-Engineers-Douglas-C.-Montgomery-George-C.-Runger-Edisi-5-2011.pdf" target="_blank">Here 📖</a>.</p>
-</section>
-<section id="introduction-to-probability-for-data-science" class="level2">
-<h2 class="anchored" data-anchor-id="introduction-to-probability-for-data-science">Introduction to Probability for Data Science</h2>
-<p>Chan, H. S. (2021). Introduction to Probability for Data Science.</p>
-<p>Downloadable from <a href="books/PDS_Shan.pdf" target="_blank">Here 📖</a>.</p>
+<p align="center">
+<iframe id="inlineFrameExample" title="" width="700" height="1400" src="https://gallery.shinyapps.io/dist_calc/">
+</iframe>
+</p>
 
 
-</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
@@ -456,16 +431,14 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   }
 });
 </script>
+
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
-      <a href="./index.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Welcome</span>
+      <a href="./appendix-fisher.html" class="pagination-link">
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text"><span class="chapter-number">E</span>&nbsp; <span class="chapter-title">Tables de la loi de Fisher <span class="math inline">\(F\)</span></span></span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="./td1.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Sheet 1</span></span> <i class="bi bi-arrow-right-short"></i>
-      </a>
   </div>
 </nav>
 </div> <!-- /content -->
