--- a/courses/MDSEfreiS7/td4.html
+++ b/courses/MDSEfreiS7/td4.html
@@ -216,19 +216,24 @@ ul.task-list li input[type="checkbox"] {
 <li><p>What must be the sample size <span class="math inline">\(n\)</span> if the length of the confidence interval at <span class="math inline">\(95\%\)</span> is <span class="math inline">\(4\)</span>?</p></li>
 </ol>
 </div>
+<!-- 
+::: {#exr-}
+Le poids de paquets de poudre de lessive, à l’issue de l’empaquetage, est
+supposé suivre une loi normale $\mathcal{N}(\mu, \sigma^2 )$ dont l’écart-type $\sigma$ est supposé connu et égal à $5 g$. $\sigma$ représente la variabilité du poids due à l’imprécision de la machine. Le poids marqué sur les paquets est de $710 g$.
+Toutes les heures, $10$ paquets sont prélevés au hasard et pesés.
+On obtient pour une heure donnée, pour un échantillon de $10$ paquets un poids moyen de $707g$.
+
+1. Donner un estimateur puis une estimation du poids moyen des paquets de lessive.
+2. Donner un intervalle de confiance à $95\%$, puis à $99\%$ pour le poids moyen des
+paquets de lessive
+3. Déterminer $\alpha$ (à l'unité près) pour qu'au seuil de risque $\alpha \%$ un intervalle de confiance du poids moyen des paquets de lessive soit $[705g;709g]$.
+:::
+ -->
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 4.3 </strong></span>Le poids de paquets de poudre de lessive, à l’issue de l’empaquetage, est supposé suivre une loi normale <span class="math inline">\(\mathcal{N}(\mu, \sigma^2 )\)</span> dont l’écart-type <span class="math inline">\(\sigma\)</span> est supposé connu et égal à <span class="math inline">\(5 g\)</span>. <span class="math inline">\(\sigma\)</span> représente la variabilité du poids due à l’imprécision de la machine. Le poids marqué sur les paquets est de <span class="math inline">\(710 g\)</span>. Toutes les heures, <span class="math inline">\(10\)</span> paquets sont prélevés au hasard et pesés. On obtient pour une heure donnée, pour un échantillon de <span class="math inline">\(10\)</span> paquets un poids moyen de <span class="math inline">\(707g\)</span>.</p>
-<ol type="1">
-<li>Donner un estimateur puis une estimation du poids moyen des paquets de lessive.</li>
-<li>Donner un intervalle de confiance à <span class="math inline">\(95\%\)</span>, puis à <span class="math inline">\(99\%\)</span> pour le poids moyen des paquets de lessive</li>
-<li>Déterminer <span class="math inline">\(\alpha\)</span> (à l’unité près) pour qu’au seuil de risque <span class="math inline">\(\alpha \%\)</span> un intervalle de confiance du poids moyen des paquets de lessive soit <span class="math inline">\([705g;709g]\)</span>.</li>
-</ol>
+<p><span class="theorem-title"><strong>Exercise 4.3 </strong></span>In the French population, the percentage of individuals whose blood is Rh-negative is <span class="math inline">\(15%\)</span>. In a representative sample of <span class="math inline">\(200\)</span> French, we observe that <span class="math inline">\(44\)</span> people are Rh-negative. Give a confidence interval at <span class="math inline">\(99\%\)</span> of the proportion of Rh-negative French.</p>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 4.4 </strong></span>In the French population, the percentage of individuals whose blood is Rh-negative is <span class="math inline">\(15%\)</span>. In a representative sample of <span class="math inline">\(200\)</span> French, we observe that <span class="math inline">\(44\)</span> people are Rh-negative. Give a confidence interval at <span class="math inline">\(99\%\)</span> of the proportion of Rh-negative French.</p>
-</div>
-<div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 4.5 </strong></span>The Bureau of Meteorology of the Australian Government provided the mean annual rainfall (in millimeters) in Australia 1983–2002 as follows <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></p>
+<p><span class="theorem-title"><strong>Exercise 4.4 </strong></span>The Bureau of Meteorology of the Australian Government provided the mean annual rainfall (in millimeters) in Australia 1983–2002 as follows <a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></p>
 <table class="table">
 <colgroup>
 <col style="width: 11%">
@@ -283,7 +288,7 @@ ul.task-list li input[type="checkbox"] {
 
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 4.6 </strong></span>The percentage of titanium in an alloy used in aerospace castings is measured in 51 randomly selected parts.</p>
+<p><span class="theorem-title"><strong>Exercise 4.5 </strong></span>The percentage of titanium in an alloy used in aerospace castings is measured in 51 randomly selected parts.</p>
 <p>The sample standard deviation is <span class="math inline">\(s = 0.37\)</span>. Construct a 95% two-sided confidence interval for <span class="math inline">\(\sigma\)</span>.</p>
 </div>
 <div class="cell">
