--- a/courses/MDSEfreiS7/materials.html
+++ b/courses/MDSEfreiS7/materials.html
@@ -183,6 +183,11 @@ ul.task-list li input[type="checkbox"] {
   <a href="./appendix-calculator.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">F</span>&nbsp; <span class="chapter-title">distribution calculator</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./appendix-Exams.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">G</span>&nbsp; <span class="chapter-title">Previous exams</span></a>
+  </div>
+</li>
       </ul>
   </li>
     </ul>
