--- a/courses/MDSEfreiS7/appendix-Exams.html
+++ b/courses/MDSEfreiS7/appendix-Exams.html
@@ -199,7 +199,6 @@ ul.task-list li input[type="checkbox"] {
    
   <ul>
   <li><a href="#partial-2022-2023" id="toc-partial-2022-2023" class="nav-link active" data-scroll-target="#partial-2022-2023"><span class="toc-section-number">G.1</span>  Partial 2022-2023</a></li>
-  <li><a href="#partial-2022-2023-2nd-chance" id="toc-partial-2022-2023-2nd-chance" class="nav-link" data-scroll-target="#partial-2022-2023-2nd-chance"><span class="toc-section-number">G.2</span>  Partial 2022-2023 (2nd chance)</a></li>
   </ul>
 </nav>
     </div>
@@ -414,95 +413,90 @@ Solution (Click to expand)
 </div>
 </div>
 </div>
-</section>
-<section id="partial-2022-2023-2nd-chance" class="level2" data-number="G.2">
-<h2 data-number="G.2" class="anchored" data-anchor-id="partial-2022-2023-2nd-chance"><span class="header-section-number">G.2</span> Partial 2022-2023 (2nd chance)</h2>
-<div class="callout-note callout callout-style-default no-icon callout-captioned">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon no-icon"></i>
-</div>
-<div class="callout-caption-container flex-fill">
-Exercise 1
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>Let <span class="math inline">\(X\)</span> be a uniform discrete random variable over the integers <span class="math inline">\(\{0,1,2,3\}\)</span> and <span class="math inline">\(Y\)</span> the random variable defined by <span class="math inline">\((X-1)^2\)</span>.</p>
-<ol type="1">
-<li><p>Determine the probability distributions of <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span>.</p></li>
-<li><p>Determine the probability distribution of the pair <span class="math inline">\((X,Y)\)</span>.</p></li>
-<li><p>Are the variables <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> independent.</p></li>
-<li><p>Calculate <span class="math inline">\(COV(X,Y)\)</span>.</p></li>
-<li><p>Calculate <span class="math inline">\(E(Y)\)</span> with two different methods.</p></li>
-</ol>
-</div>
-</div>
-<div class="callout-note callout callout-style-default no-icon callout-captioned">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon no-icon"></i>
-</div>
-<div class="callout-caption-container flex-fill">
-Exercise 2
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>Let <span class="math inline">\(a\)</span> a real parameter and <span class="math inline">\(X\)</span> the real random variable having as density function: <span class="math display">\[f_X(x) = \left\{
+<!-- 
+
+## Partial 2022-2023 (2nd chance)
+
+::: {.callout-note icon="false" }
+## Exercise 1
+Let $X$ be a
+uniform discrete random variable over the integers $\{0,1,2,3\}$ and $Y$
+the random variable defined by $(X-1)^2$.
+
+1.  Determine the probability distributions of $X$ and $Y$.
+
+2.  Determine the probability distribution of the pair $(X,Y)$.
+
+3.  Are the variables $X$ and $Y$ independent.
+
+4.  Calculate $COV(X,Y)$.
+
+5.  Calculate $E(Y)$ with two different methods.
+:::
+
+::: {.callout-note icon="false" }
+## Exercise 2
+Let $a$ a real parameter and $X$ the real random variable having as
+density function: $$f_X(x) = \left\{
     \begin{array}{ll}
-       \frac{1}{2} + ax  &amp; \mbox{if } x \in [-1,1] \\
-        0 &amp; \mbox{otherwise.}
+       \frac{1}{2} + ax  & \mbox{if } x \in [-1,1] \\
+        0 & \mbox{otherwise.}
     \end{array}
-\right.\]</span></p>
-<ol type="1">
-<li><p>For which values of a <span class="math inline">\(f_X\)</span> is a density.</p>
-<p>In the following we suppose that a = <span class="math inline">\(1/2\)</span></p></li>
-<li><p>Calculate the following probabilities: <span class="math inline">\(P(-2&lt;X&lt;2)\)</span> and <span class="math inline">\(P (0 &lt; X &lt; 3)\)</span></p></li>
-<li><p>Calculate <span class="math inline">\(E(X)\)</span> and <span class="math inline">\(E(X^2)\)</span>.</p></li>
-<li><p>Determine the distribution function of <span class="math inline">\(X\)</span>.</p></li>
-<li><p>Let Y = <span class="math inline">\(X^2\)</span>, determine the density of <span class="math inline">\(Y\)</span></p></li>
-<li><p>Calculate <span class="math inline">\(E(Y)\)</span> in two different ways.</p></li>
-</ol>
-</div>
-</div>
-<div class="callout-note callout callout-style-default no-icon callout-captioned">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon no-icon"></i>
-</div>
-<div class="callout-caption-container flex-fill">
-Exercise 3
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>Let <span class="math inline">\(X_1, X_2,.,.,.X_n\)</span> a random sample (iid), of size <span class="math inline">\(n &gt;10\)</span>. The population mean is <span class="math inline">\(\mu\)</span> and variance is noted <span class="math inline">\(\sigma^2\)</span> . We define the following estimators: <span class="math display">\[T_1 = \frac{1}{n}\sum_{i=1}^ {n} X_i\]</span> <span class="math display">\[T_2 = \frac{3  X_1 - 2 X_{10}  + 2 X_4}{3}\]</span></p>
-<ol type="1">
-<li><p>Calculate <span class="math inline">\(E(T_2)\)</span> and <span class="math inline">\(V(T_2)\)</span>. Using the CLT, give the distribution of <span class="math inline">\(T_1\)</span> for large values of <span class="math inline">\(n\)</span></p></li>
-<li><p>Prove that <span class="math inline">\(T_1\)</span> et <span class="math inline">\(T_2\)</span> are unbiased estimators of <span class="math inline">\(\mu\)</span>.</p></li>
-<li><p>Between <span class="math inline">\(T_1\)</span> and <span class="math inline">\(T_2\)</span> which one is better for estimating <span class="math inline">\(\mu\)</span>.</p></li>
-</ol>
-</div>
-</div>
-<div class="callout-note callout callout-style-default no-icon callout-captioned">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon no-icon"></i>
-</div>
-<div class="callout-caption-container flex-fill">
-Exercise 4
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>It has been established that the duration <span class="math inline">\(X\)</span> (in days number units) of a device follows a Poisson distribution with parameter <span class="math inline">\(\lambda &gt;0\)</span> : <span class="math display">\[P(X=k) = \frac{\lambda ^k \exp(-\lambda)}{k!}, \,\, k \in \mathbb{N}\]</span> We consider a random iid sample <span class="math inline">\((X_1,…,X_{100})\)</span> following the same variable <span class="math inline">\(X\)</span>.</p>
-<ol type="1">
-<li><p>Establish the expression for the maximum likelihood estimator of <span class="math inline">\(\lambda\)</span>.</p></li>
-<li><p>We suppose suppose now that the <span class="math inline">\(\lambda\)</span> is fixed such that <span class="math inline">\(E(X)=V(X)=1\)</span>:</p>
-<ul>
-<li><p>What is the approximate probability distribution of <span class="math inline">\(\overline{X} = \frac{1}{100} \sum_{i=1}^{i=100} X_i\)</span>.</p></li>
-<li><p>Compute <span class="math inline">\(P( \overline{X}&gt; 1.2)\)</span>.</p></li>
-</ul></li>
-</ol>
-</div>
-</div>
+\right.$$
+
+1.  For which values of a $f_X$ is a density.
+
+    In the following we suppose that a = $1/2$
+
+2.  Calculate the following probabilities: $P(-2<X<2)$ and
+    $P (0 < X < 3)$
+
+3.  Calculate $E(X)$ and $E(X^2)$.
+
+4.  Determine the distribution function of $X$.
+
+5.  Let Y = $X^2$, determine the density of $Y$
+
+6.  Calculate $E(Y)$ in two different ways.
+:::
+
+
+::: {.callout-note icon="false" }
+## Exercise 3
+Let $X_1, X_2,.,.,.X_n$ a random sample (iid), of size $n >10$. The
+population mean is $\mu$ and variance is noted $\sigma^2$ . We define
+the following estimators: $$T_1 = \frac{1}{n}\sum_{i=1}^ {n} X_i$$
+$$T_2 = \frac{3  X_1 - 2 X_{10}  + 2 X_4}{3}$$
+
+1.  Calculate $E(T_2)$ and $V(T_2)$. Using the CLT, give the
+    distribution of $T_1$ for large values of $n$
+
+2.  Prove that $T_1$ et $T_2$ are unbiased estimators of $\mu$.
+
+3.  Between $T_1$ and $T_2$ which one is better for estimating $\mu$.
+:::
+
+
+::: {.callout-note icon="false" }
+## Exercise 4
+
+It has been established that the duration $X$ (in days number units) of
+a device follows a Poisson distribution with parameter $\lambda >0$ :
+$$P(X=k) = \frac{\lambda ^k \exp(-\lambda)}{k!}, \,\, k \in \mathbb{N}$$
+We consider a random iid sample $(X_1,…,X_{100})$ following the same
+variable $X$.
+
+1.  Establish the expression for the maximum likelihood estimator of
+    $\lambda$.
+
+2.  We suppose suppose now that the $\lambda$ is fixed such that
+    $E(X)=V(X)=1$:
+
+    -   What is the approximate probability distribution of
+        $\overline{X} = \frac{1}{100} \sum_{i=1}^{i=100} X_i$.
+
+    -   Compute $P(  \overline{X}> 1.2)$.
+::: -->
 
 
 </section>
