--- a/courses/ProbasEfreiS3/variables-aleatoires-discretes.html
+++ b/courses/ProbasEfreiS3/variables-aleatoires-discretes.html
@@ -152,6 +152,11 @@ ul.task-list li input[type="checkbox"] {
   <a href="./appendix.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">A</span>&nbsp; <span class="chapter-title">Table de la loi Normale centrée réduite</span></a>
   </div>
 </li>
+          <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./appendix-Exams.html" class="sidebar-item-text sidebar-link"><span class="chapter-number">B</span>&nbsp; <span class="chapter-title">Examens</span></a>
+  </div>
+</li>
       </ul>
 </li>
     </ul>
