--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
   <meta property="og:type" content="website" />
 
   
-  <meta property="og:url" content="http://mghassany.com/" />
-  <link rel="canonical" href="http://mghassany.com/" />
+  <meta property="og:url" content="http://localhost:4000/" />
+  <link rel="canonical" href="http://localhost:4000/" />
   
 
   
-  <meta property="og:image" content="http://mghassany.com/img/MG_web.jpg" />
+  <meta property="og:image" content="http://localhost:4000/img/MG_web.jpg" />
   
   
 
@@ -88,7 +88,7 @@
   
 
   
-  <meta name="twitter:image" content="http://mghassany.com/img/MG_web.jpg" />
+  <meta name="twitter:image" content="http://localhost:4000/img/MG_web.jpg" />
   
 
 </head>
@@ -106,7 +106,7 @@
         <span class="icon-bar"></span>
       </button>
 <!--       remove navbar-brand to remove name in order to put photo on left
- --><!--       <a class="navbar-brand" href="http://mghassany.com">Mohamad Ghassany</a>
+ --><!--       <a class="navbar-brand" href="http://localhost:4000">Mohamad Ghassany</a>
  -->    </div>
 
     <div class="collapse navbar-collapse" id="main-navbar">
@@ -188,7 +188,7 @@
 	
 	<div class="avatar-container">
 	  <div class="avatar-img-border">
-	    <a href="http://mghassany.com ">
+	    <a href="http://localhost:4000 ">
 	      <img class="avatar-img" src="/img/MG_web.jpg" />
 		</a>
 	  </div>
