--- a/courses/MLEfreiS7/TD1.html
+++ b/courses/MLEfreiS7/TD1.html
@@ -179,6 +179,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Starting with Neural Networks</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./grades.html" class="sidebar-item-text sidebar-link">Grades</a>
+  </div>
+</li>
     </ul>
 </div>
 </nav><!-- margin-sidebar --><div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
@@ -692,8 +697,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.552
 Model:                            OLS   Adj. R-squared:                  0.551
 Method:                 Least Squares   F-statistic:                     495.9
-Date:                Tue, 20 Sep 2022   Prob (F-statistic):           3.76e-72
-Time:                        15:13:33   Log-Likelihood:                -1310.5
+Date:                Fri, 28 Oct 2022   Prob (F-statistic):           3.76e-72
+Time:                        13:20:36   Log-Likelihood:                -1310.5
 No. Observations:                 404   AIC:                             2625.
 Df Residuals:                     402   BIC:                             2633.
 Df Model:                           1                                         
@@ -912,8 +917,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.738
 Model:                            OLS   Adj. R-squared:                  0.730
 Method:                 Least Squares   F-statistic:                     84.65
-Date:                Tue, 20 Sep 2022   Prob (F-statistic):          8.21e-105
-Time:                        15:13:36   Log-Likelihood:                -1202.0
+Date:                Fri, 28 Oct 2022   Prob (F-statistic):          8.21e-105
+Time:                        13:20:39   Log-Likelihood:                -1202.0
 No. Observations:                 404   AIC:                             2432.
 Df Residuals:                     390   BIC:                             2488.
 Df Model:                          13                                         
@@ -996,8 +1001,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.738
 Model:                            OLS   Adj. R-squared:                  0.730
 Method:                 Least Squares   F-statistic:                     91.94
-Date:                Tue, 20 Sep 2022   Prob (F-statistic):          8.39e-106
-Time:                        15:13:37   Log-Likelihood:                -1202.0
+Date:                Fri, 28 Oct 2022   Prob (F-statistic):          8.39e-106
+Time:                        13:20:40   Log-Likelihood:                -1202.0
 No. Observations:                 404   AIC:                             2430.
 Df Residuals:                     391   BIC:                             2482.
 Df Model:                          12                                         
@@ -1043,8 +1048,8 @@ strong multicollinearity or other numerical problems.</code></pre>
 Dep. Variable:                   MEDV   R-squared:                       0.738
 Model:                            OLS   Adj. R-squared:                  0.730
 Method:                 Least Squares   F-statistic:                     91.94
-Date:                Tue, 20 Sep 2022   Prob (F-statistic):          8.37e-106
-Time:                        15:13:37   Log-Likelihood:                -1202.0
+Date:                Fri, 28 Oct 2022   Prob (F-statistic):          8.37e-106
+Time:                        13:20:40   Log-Likelihood:                -1202.0
 No. Observations:                 404   AIC:                             2430.
 Df Residuals:                     391   BIC:                             2482.
 Df Model:                          12                                         
@@ -1161,8 +1166,8 @@ Solution
 Dep. Variable:                   MEDV   R-squared:                       0.787
 Model:                            OLS   Adj. R-squared:                  0.780
 Method:                 Least Squares   F-statistic:                     111.1
-Date:                Tue, 20 Sep 2022   Prob (F-statistic):          3.07e-122
-Time:                        15:13:38   Log-Likelihood:                -1160.0
+Date:                Fri, 28 Oct 2022   Prob (F-statistic):          3.07e-122
+Time:                        13:20:41   Log-Likelihood:                -1160.0
 No. Observations:                 404   AIC:                             2348.
 Df Residuals:                     390   BIC:                             2404.
 Df Model:                          13                                         
