--- a/courses/MLEfreiS7/TD2.html
+++ b/courses/MLEfreiS7/TD2.html
@@ -179,6 +179,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
   <a href="./TD4.html" class="sidebar-item-text sidebar-link">Lab4: Starting with Neural Networks</a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./grades.html" class="sidebar-item-text sidebar-link">Grades</a>
+  </div>
+</li>
     </ul>
 </div>
 </nav><!-- margin-sidebar --><div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
