--- a/courses/ProbasEfreiS3/appendix-Exams.html
+++ b/courses/ProbasEfreiS3/appendix-Exams.html
@@ -430,7 +430,7 @@ Solution (Click to expand)
 <section id="de-2022-2023" class="level2" data-number="B.2">
 <h2 data-number="B.2" class="anchored" data-anchor-id="de-2022-2023"><span class="header-section-number">B.2</span> DE 2022-2023</h2>
 <div class="callout-important callout callout-style-default no-icon callout-captioned">
-<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-9-contents" aria-controls="callout-9" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-header d-flex align-content-center" data-bs-toggle="collapse" data-bs-target=".callout-9-contents" aria-controls="callout-9" aria-expanded="true" aria-label="Toggle callout">
 <div class="callout-icon-container">
 <i class="callout-icon no-icon"></i>
 </div>
@@ -439,13 +439,15 @@ Sujet et Correction DE
 </div>
 <div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
 </div>
-<div id="callout-9" class="callout-9-contents callout-collapse collapse">
+<div id="callout-9" class="callout-9-contents callout-collapse collapse show">
 <div class="callout-body-container callout-body">
-<!-- ![](img/Proba_03-10-22/Proba_03-10-22-1.jpg)
-![](img/Proba_03-10-22/Proba_03-10-22-2.jpg)
-![](img/Proba_03-10-22/Proba_03-10-22-3.jpg) -->
-<iframe id="inlineFrameExample" title="" width="900" height="1200" src="https://share.goodnotes.com/s/oIUooGkAgkPtKoEQkjWSpW">
-</iframe>
+<p><img src="img/Correction_DE_22-23/Correction_DE_22-23-1.jpg" class="img-fluid"> <img src="img/Correction_DE_22-23/Correction_DE_22-23-2.jpg" class="img-fluid"> <img src="img/Correction_DE_22-23/Correction_DE_22-23-3.jpg" class="img-fluid"> <img src="img/Correction_DE_22-23/Correction_DE_22-23-4.jpg" class="img-fluid"> <img src="img/Correction_DE_22-23/Correction_DE_22-23-5.jpg" class="img-fluid"> <img src="img/Correction_DE_22-23/Correction_DE_22-23-6.jpg" class="img-fluid"> <!-- 
+<iframe id="inlineFrameExample"
+    title=""
+    width="900"
+    height="1200"
+    src="https://share.goodnotes.com/s/oIUooGkAgkPtKoEQkjWSpW">
+</iframe> --></p>
 </div>
 </div>
 </div>
