--- a/courses/MDSEfreiS7/td1.html
+++ b/courses/MDSEfreiS7/td1.html
@@ -206,7 +206,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#probability" id="toc-probability" class="nav-link" data-scroll-target="#probability">Probability</a></li>
   <li><a href="#bayes" id="toc-bayes" class="nav-link" data-scroll-target="#bayes">Bayes</a></li>
   <li><a href="#discrete-random-variables" id="toc-discrete-random-variables" class="nav-link" data-scroll-target="#discrete-random-variables">Discrete random variables</a></li>
-  <li><a href="#lois-usuelles-discr%C3%A8tes" id="toc-lois-usuelles-discrètes" class="nav-link" data-scroll-target="#lois-usuelles-discr%C3%A8tes">Lois usuelles discrètes</a></li>
+  <li><a href="#discrete-random-variables-1" id="toc-discrete-random-variables-1" class="nav-link" data-scroll-target="#discrete-random-variables-1">Discrete Random Variables</a></li>
   </ul></nav>
     </div>
 <!-- main -->
@@ -296,7 +296,7 @@ ul.task-list li input[type="checkbox"] {
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 1.8 </strong></span>et <span class="math inline">\(X\)</span> be a random variable that follows the uniform distribution (e.g.&nbsp;equiprobability of values of <span class="math inline">\(X\)</span>) on the set <span class="math inline">\(X(\Omega) = \{-3, -2, 1, 4\}\)</span>.</p>
+<p><span class="theorem-title"><strong>Exercise 1.8 </strong></span>Let <span class="math inline">\(X\)</span> be a random variable that follows the uniform distribution (e.g.&nbsp;equiprobability of values of <span class="math inline">\(X\)</span>) on the set <span class="math inline">\(X(\Omega) = \{-3, -2, 1, 4\}\)</span>.</p>
 <ol type="1">
 <li><p>Give the law of <span class="math inline">\(X\)</span>.</p></li>
 <li>
@@ -344,13 +344,13 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Are the variables <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> independent?</p></li>
 </ol>
 </div>
-</section><section id="lois-usuelles-discrètes" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="lois-usuelles-discrètes">Lois usuelles discrètes</h2>
+</section><section id="discrete-random-variables-1" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="discrete-random-variables-1">Discrete Random Variables</h2>
 <div id="exr-" class="theorem exercise">
 <p><span class="theorem-title"><strong>Exercise 1.10 </strong></span>An urn contains 2 balls with number 20, 4 balls with number 10 and 4 balls with number 5.</p>
 <ol type="1">
 <li><p>An experiment consists in drawing simultaneously 3 balls from the urn. Calculate probability p so that the sum of the numbers drawn is equal to 30.</p></li>
 <li>
-<p>This experiment is repeated 4 times, each time putting the three balls drawn back into the urn. Let <span class="math inline">\(X\)</span> be the random variabler indicating the number of draws giving a sum of numbers equal to 30.</p>
+<p>This experiment is repeated 4 times, each time putting the three balls drawn back into the urn. Let <span class="math inline">\(X\)</span> be the random variable indicating the number of draws giving a sum of numbers equal to 30.</p>
 <ol type="1">
 <li><p>What is the probability law of <span class="math inline">\(X\)</span>. Give its expected and standard deviation.</p></li>
 <li><p>Calculate the probability of having at least once the sum 30 out of 4 draws.</p></li>
