--- a/courses/MLEfreiS7/index.html
+++ b/courses/MLEfreiS7/index.html
@@ -126,6 +126,12 @@ ul.task-list li input[type="checkbox"] {
  <span class="menu-text">Lab1: Linear Regression</span></a>
   </div>
 </li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="./TD2.html" class="sidebar-item-text sidebar-link">
+ <span class="menu-text">Lab2: Logistic Regression &amp; Regularization</span></a>
+  </div>
+</li>
     </ul>
     </div>
 </nav>
