--- a/courses/MDSEfreiS7/index.html
+++ b/courses/MDSEfreiS7/index.html
@@ -300,7 +300,7 @@ ul.task-list li input[type="checkbox"] {
 <tr class="even">
 <td style="text-align: center;">4</td>
 <td>Confidence Intervals</td>
-<td></td>
+<td><a href="Slides/Lecture4_confidence_intervals.pdf">📖</a></td>
 <td><a href="td4.html">✍️</a></td>
 </tr>
 <tr class="odd">
