--- a/courses/MDSEfreiS7/index.html
+++ b/courses/MDSEfreiS7/index.html
@@ -306,13 +306,13 @@ ul.task-list li input[type="checkbox"] {
 <tr class="odd">
 <td style="text-align: center;">5</td>
 <td>Hypothesis Tests: one sample</td>
-<td>[📖]</td>
+<td><a href="Slides/Lecture5_statistical_Tests_1sample.pdf">📖</a></td>
 <td><a href="td5.html">✍️</a></td>
 </tr>
 <tr class="even">
 <td style="text-align: center;">6</td>
 <td>Hypothesis Tests: two samples</td>
-<td>[📖]</td>
+<td><a href="Slides/Lecture6_Statistical_Tests_2samples.pdf">📖</a></td>
 <td></td>
 </tr>
 <tr class="odd">
