--- a/courses/MDSEfreiS7/index.html
+++ b/courses/MDSEfreiS7/index.html
@@ -313,13 +313,13 @@ ul.task-list li input[type="checkbox"] {
 <td style="text-align: center;">6</td>
 <td>Hypothesis Tests: two samples</td>
 <td><a href="Slides/Lecture6_Statistical_Tests_2samples.pdf">📖</a></td>
-<td></td>
+<td><a href="td6.html">✍️</a></td>
 </tr>
 <tr class="odd">
 <td style="text-align: center;">7</td>
-<td>Exam</td>
-<td></td>
-<td></td>
+<td>Chi-Squared Tests + <strong>Exam</strong></td>
+<td><a href="Slides/Lecture7_Chi_Squared_tests.pdf">📖</a></td>
+<td><a href="td7.html">✍️</a></td>
 </tr>
 </tbody>
 </table>
