--- a/courses/MDSEfreiS7/td6.html
+++ b/courses/MDSEfreiS7/td6.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Mathematics for Data Science - 6&nbsp; Exercises 5</title>
+<title>Mathematics for Data Science - 6&nbsp; Exercises 6</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -237,7 +237,7 @@ ul.task-list li input[type="checkbox"] {
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Exercises 5</span></h1>
+<h1 class="title"><span class="chapter-number">6</span>&nbsp; <span class="chapter-title">Exercises 6</span></h1>
 </div>
 
 
@@ -253,7 +253,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 6.1 </strong></span>The manager of an orange juice canning company wants to compare the performance of two canning lines at her plant. Since line <span class="math inline">\(1\)</span> is relatively new, she expects it to produce, on average, a greater number of cases per day than line <span class="math inline">\(2\)</span>, which is older. Normal distribution is considered a good model for this variable. Ten production days are randomly selected for each chain. According to these data, <span class="math inline">\(\overline{x}_1=824.9\)</span> cases per day and <span class="math inline">\(\overline{x}_2=818.6\)</span> cases per day. We know from experience of operating this type of equipment that <span class="math inline">\(\sigma_1^2=40\)</span> and <span class="math inline">\(\sigma_2^2=50\)</span>. Can the manager favor the <span class="math inline">\(1\)</span> chain at <span class="math inline">\(\alpha = 5\%\)</span> error threshold?</p>
+<p><span class="theorem-title"><strong>Exercise 6.1 </strong></span>The manager of an orange juice canning company wants to compare the performance of two canning lines at her plant. Since line <span class="math inline">\(1\)</span> is relatively new, she expects it to produce, on average, a greater number of cases per day than line <span class="math inline">\(2\)</span>, which is older. Normal distribution is considered a good model for this variable. Ten production days are randomly selected for each chain. According to these data, <span class="math inline">\(\overline{x}_1=824.9\)</span> cases per day and <span class="math inline">\(\overline{x}_2=818.6\)</span> cases per day. We know from experience of operating this type of equipment that <span class="math inline">\(\sigma_1^2=40\)</span> and <span class="math inline">\(\sigma_2^2=50\)</span>. Can the manager favor the 1st chain at <span class="math inline">\(\alpha = 5\%\)</span> error threshold?</p>
 </div>
 <div id="exr-" class="theorem exercise">
 <p><span class="theorem-title"><strong>Exercise 6.2 </strong></span>A company producing wind-generated electricity wanted to compare the efficiency of two types of wind turbine: a two-bladed turbine (E2p) and a three-bladed turbine (E3p). To do this, we installed a wind turbine of each type on the same wind farm, and recorded the power output of each turbine (in kW) every 10 minutes.</p>
@@ -303,9 +303,9 @@ ul.task-list li input[type="checkbox"] {
 <ol type="1">
 <li>Define the two random variables under study.</li>
 <li>Give a point estimate of the average power of each wind turbine.</li>
-<li>Give a point estimate of the variability of the power of each wind turbine.</li>
+<li>Give a point estimate of the variance of the power of each wind turbine.</li>
 <li>Give a <span class="math inline">\(95\%\)</span> confidence interval for the mean power of each wind turbine.</li>
-<li>Can we assume that the powers of the two turbines have the same variability?</li>
+<li>Can we assume that the powers of the two turbines have the same variance?</li>
 <li>Can we state, with a risk of error of <span class="math inline">\(1\%\)</span>, that the average power of the 3-bladed wind turbine is greater than the average power of the 2-bladed wind turbine?</li>
 <li>Based on this study, can you recommend a particular type of wind turbine to the company?</li>
 </ol>
