--- a/courses/MDSEfreiS7/appendix-normal1.html
+++ b/courses/MDSEfreiS7/appendix-normal1.html
@@ -221,8 +221,8 @@ ul.task-list li input[type="checkbox"] {
   </div>
   
 
-</header><p><span class="math inline">\(X\)</span> étant une variable aléatoire de loi <span class="math inline">\(\mathcal{N}(0,1)\)</span>, la table donne la valeur de <span class="math inline">\(\Phi(a)=P(X\leq a)\)</span>. En <svg aria-hidden="true" role="img" viewbox="0 0 581 512" style="height:1em;width:1.13em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M581 226.6C581 119.1 450.9 32 290.5 32S0 119.1 0 226.6C0 322.4 103.3 402 239.4 418.1V480h99.1v-61.5c24.3-2.7 47.6-7.4 69.4-13.9L448 480h112l-67.4-113.7c54.5-35.4 88.4-84.9 88.4-139.7zm-466.8 14.5c0-73.5 98.9-133 220.8-133s211.9 40.7 211.9 133c0 50.1-26.5 85-70.3 106.4-2.4-1.6-4.7-2.9-6.4-3.7-10.2-5.2-27.8-10.5-27.8-10.5s86.6-6.4 86.6-92.7-90.6-87.9-90.6-87.9h-199V361c-74.1-21.5-125.2-67.1-125.2-119.9zm225.1 38.3v-55.6c57.8 0 87.8-6.8 87.8 27.3 0 36.5-38.2 28.3-87.8 28.3zm-.9 72.5H365c10.8 0 18.9 11.7 24 19.2-16.1 1.9-33 2.8-50.6 2.9v-22.1z"></path></svg>, la commande correspondante est <code>pnorm(a)</code>.</p>
-<div class="cell" data-fig.process="[&quot;function (path) &quot;,&quot;{&quot;,&quot;    if (knitr::is_latex_output()) &quot;,&quot;        return(path)&quot;,&quot;    path2 = xfun::with_ext(path, &quot;png&quot;)&quot;,&quot;    img = magick::image_read_pdf(path)&quot;,&quot;    magick::image_write(img, path2, format = &quot;png&quot;)&quot;,&quot;    path2&quot;,&quot;}&quot;]" data-hash="appendix-normal1_cache/html/normale1_b84d0fd956d3f74b5f8c7405d6e9478f">
+</header><p><span class="math inline">\(X\)</span> étant une variable aléatoire de loi <span class="math inline">\(\mathcal{N}(0,1)\)</span>, la table donne la valeur de <span class="math inline">\(\Phi(z)=P(X\leq z)\)</span>. En <svg aria-hidden="true" role="img" viewbox="0 0 581 512" style="height:1em;width:1.13em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M581 226.6C581 119.1 450.9 32 290.5 32S0 119.1 0 226.6C0 322.4 103.3 402 239.4 418.1V480h99.1v-61.5c24.3-2.7 47.6-7.4 69.4-13.9L448 480h112l-67.4-113.7c54.5-35.4 88.4-84.9 88.4-139.7zm-466.8 14.5c0-73.5 98.9-133 220.8-133s211.9 40.7 211.9 133c0 50.1-26.5 85-70.3 106.4-2.4-1.6-4.7-2.9-6.4-3.7-10.2-5.2-27.8-10.5-27.8-10.5s86.6-6.4 86.6-92.7-90.6-87.9-90.6-87.9h-199V361c-74.1-21.5-125.2-67.1-125.2-119.9zm225.1 38.3v-55.6c57.8 0 87.8-6.8 87.8 27.3 0 36.5-38.2 28.3-87.8 28.3zm-.9 72.5H365c10.8 0 18.9 11.7 24 19.2-16.1 1.9-33 2.8-50.6 2.9v-22.1z"></path></svg>, la commande correspondante est <code>pnorm(z)</code>.</p>
+<div class="cell" data-fig.process="[&quot;function (path) &quot;,&quot;{&quot;,&quot;    if (knitr::is_latex_output()) &quot;,&quot;        return(path)&quot;,&quot;    path2 = xfun::with_ext(path, &quot;png&quot;)&quot;,&quot;    img = magick::image_read_pdf(path)&quot;,&quot;    magick::image_write(img, path2, format = &quot;png&quot;)&quot;,&quot;    path2&quot;,&quot;}&quot;]" data-hash="appendix-normal1_cache/html/normale1_7ca221930449aa818901425bebf2688f">
 <div class="cell-output-display">
 <p><img src="appendix-normal1_files/figure-html/normale1-1.png" class="img-fluid" style="width:80.0%"></p>
 </div>
@@ -232,7 +232,7 @@ ul.task-list li input[type="checkbox"] {
 <table class="table table-striped table" style="font-size: 11px; margin-left: auto; margin-right: auto; margin-left: auto; margin-right: auto;">
 <thead><tr>
 <th style="text-align:left;position: sticky; top:0; background-color: #FFFFFF;font-weight: bold;">
-<span class="math inline">\(a\)</span>
+<span class="math inline">\(z\)</span>
 </th>
 <th style="text-align:right;position: sticky; top:0; background-color: #FFFFFF;font-weight: bold;">
 0
