--- a/courses/MDSEfreiS7/td6.html
+++ b/courses/MDSEfreiS7/td6.html
@@ -311,7 +311,7 @@ ul.task-list li input[type="checkbox"] {
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercise 6.3 </strong></span>A manufacturer uses machines from two different manufacturers for his production. After six months’ use, he notes that out of $80 machines of type <span class="math inline">\(A\)</span>, $50 have never broken down, whereas for type <span class="math inline">\(B\)</span> the proportion is $40 out of $60. Can these two types of machine be considered equivalent at the error threshold <span class="math inline">\(\alpha = 5\%\)</span>?</p>
+<p><span class="theorem-title"><strong>Exercise 6.3 </strong></span>A manufacturer uses machines from two different manufacturers for his production. After six months’ use, he notes that out of <span class="math inline">\(80\)</span> machines of type <span class="math inline">\(A\)</span>, <span class="math inline">\(50\)</span> have never broken down, whereas for type <span class="math inline">\(B\)</span> the proportion is <span class="math inline">\(40\)</span> out of <span class="math inline">\(60\)</span>. Can these two types of machine be considered equivalent at the error threshold <span class="math inline">\(\alpha = 5\%\)</span>?</p>
 </div>
 <section id="lab" class="level2 unnumbered">
 <h2 class="unnumbered anchored" data-anchor-id="lab">Lab</h2>
